# GCF_with3N

./: LICENSE  README.md
src/: CMakeLists.txt
src/cmake_modules/: FindROOT.cmake
src/include/: constants.hh  helpers.hh
src/include/constants/: geantCodes.hh  nuclearMasses.hh  particleMasses.hh  pdgCodes.hh
src/libraries/cross_sections/: DISCrossSection.cc  DISCrossSection.hh  NNCrossSection.cc  NNCrossSection.hh  eNCrossSection.cc  eNCrossSection.hh  photoCrossSection.cc  photoCrossSection.hh
src/libraries/cross_sections/CTEQ/: ct11pdf.cc  ct11pdf.h
src/libraries/generator/: gcfGenerator.cc  gcfGenerator.hh
src/libraries/nucleus/: gcfNucleus.cc  gcfNucleus.hh  gcfSRC.cc  gcfSRC.hh
src/programs/: CMakeLists.txt
src/programs/genCCQE/: CCQEGenerator.cc  CCQEGenerator.hh  CMakeLists.txt  genCCQE.cc
src/programs/genCCQE/spectra/: uBSpectrum.hh
src/programs/genDIS/: CMakeLists.txt  DISGenerator.cc  DISGenerator.hh  genDIS.cc
src/programs/genElectro/: CMakeLists.txt  electroGenerator.cc  electroGenerator.hh  genElectro.cc
src/programs/genIon/: CMakeLists.txt  genIon.cc  ionGenerator.cc  ionGenerator.hh
src/programs/genPhoto/: CMakeLists.txt  genPhoto.cc  photoGenerator.cc  photoGenerator.hh
src/programs/genPhoto/spectra/: amorphousSpectrum.hh  defaultSpectrum.hh  diamondSpectrum.hh
src/programs/genQE/: CMakeLists.txt  QEGenerator.cc  QEGenerator.hh  genQE.cc  genQE_EIC.cc
src/programs/genQE_3N/: CMakeLists.txt  QEGenerator_3N.cc  QEGenerator_3N.hh  Ternary.cc  fS.cc  genQE_3N.cc
src/programs/sfSampler/: CMakeLists.txt  sfSampler.cc  sfSamplerLC.cc
